<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <!-- Splash -->
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.yourname.sra.ui.auth.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Login -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.yourname.sra.ui.auth.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Signup -->
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.yourname.sra.ui.auth.SignupFragment"
        android:label="@string/signup_title"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signupFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Dashboard -->
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.yourname.sra.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Task List -->
    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.yourname.sra.ui.tasks.TaskListFragment"
        android:label="@string/nav_tasks"
        tools:layout="@layout/fragment_task_list">
        <action
            android:id="@+id/action_taskListFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
        <action
            android:id="@+id/action_taskListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Task Detail -->
    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.yourname.sra.ui.tasks.TaskDetailFragment"
        android:label="@string/task_detail_title"
        tools:layout="@layout/fragment_task_detail">
        <argument
            android:name="taskId"
            app:argType="string" />
    </fragment>

    <!-- Survey -->
    <fragment
        android:id="@+id/surveyFragment"
        android:name="com.yourname.sra.ui.survey.SurveyFragment"
        android:label="@string/nav_survey"
        tools:layout="@layout/fragment_survey">
        <action
            android:id="@+id/action_surveyFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Notifications -->
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.yourname.sra.ui.notifications.NotificationFragment"
        android:label="@string/nav_notifications"
        tools:layout="@layout/fragment_notification">
        <action
            android:id="@+id/action_notificationFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Profile -->
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.yourname.sra.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>